Rebased onto multi-threading. Fixed dtos