@@ -1,45 +1,44 @@
 package org.team27.stocksim.model.util.dto;
 
-import org.team27.stocksim.model.market.Order;
-
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
 public class OrderHistoryDTO {
 
-    private List<OrderDTO> orders;
-    private List<TradeDTO> trades;
+    private final List<OrderDTO> orders;
+    private final List<TradeDTO> trades;
 
-    public OrderHistoryDTO() {}
-
-    public OrderHistoryDTO(OrderDTO order, TradeDTO trade) {
-        this.orders = List.of(order);
-        this.trades = List.of(trade);
+    public OrderHistoryDTO(List<OrderDTO> orders, List<TradeDTO> trades) {
+        this.orders = Collections.unmodifiableList(orders);
+        this.trades = Collections.unmodifiableList(trades);
     }
 
-    // Getters and Setters
-
+    // Getters only (immutable)
     public List<OrderDTO> getOrders() {
         return orders;
-    }
-
-    public void setOrders(List<OrderDTO> orders) {
-        this.orders = orders;
     }
 
     public List<TradeDTO> getTrades() {
         return trades;
     }
 
-    public void setTrades(List<TradeDTO> trades) {
-        this.trades = trades;
-    }
 
     public List<OrderDTO> getActiveOrders() {
         return orders.stream()
                 .filter(order -> !Objects.equals(order.getStatus(), "FILLED")
                         && !Objects.equals(order.getStatus(), "CANCELLED"))
                 .collect(Collectors.toList());
+    }
+
+    /**
+     * Get active (non-filled, non-cancelled) orders as DTOs.
+     * This is an alias for getActiveOrders() for backward compatibility.
+     *
+     * @return List of active order DTOs
+     */
+    public List<OrderDTO> getActiveOrdersDTO() {
+        return getActiveOrders();
     }
 }
